# alpha-jerry

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  pyproject.toml  temp_debug.txt  temp_out.txt  temp_out2.txt
.github/workflows/: ci.yml
docs/: ROADMAP.md  brd-1.md  brd.md  data-contract.md  dev-guide.md  dev-log.md  field-mapping.csv  prd.md
integrated_tests/: test_latest_period.py  test_smoke_collect.py
scripts/: gen_field_mapping.py  smoke_collect.py  verify_latest.py
src/: config.py
src/core/: pipeline.py
src/data/: __init__.py  base.py  interfaces.py  tushare_fetcher.py
src/rating/: industry.py
src/reports/: csv_writer.py
src/schemas/: financial.py
src/utils/: cache.py  format.py  period.py
tests/: test_period.py  test_pipeline.py  test_schemas.py  test_skeleton.py  test_tushare_fetcher.py
